# umcg-intelligence

./: .env  core.py  environment_sample.csv  excel_intelligence.xlsx  gemeente_sample.csv  health_sample.csv  hws-ticketing-system_key.pem  intelligence.ipynb  main.py  pyproject.toml  supabase-vm_key.pem  world_sample.csv
