[tool.poetry]
name = "umcg-intelligence"
version = "0.1.0"
description = ""
authors = ["Samuel Yawson <s.yawson@4th-ir.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
